--- a/auth-service.properties
+++ b/auth-service.properties
@@ -12,3 +12,6 @@ info.app.version=1.0.0
 
 server.port=8081
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+spring.boot.admin.client.url=http://localhost:8080
+management.endpoints.web.exposure.include=*
