--- a/auth-service.properties
+++ b/auth-service.properties
@@ -1,9 +1,9 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/my_db
+spring.datasource.username=my_db
+spring.datasource.password=my_db
+spring.datasource.driver=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 info.app.name=Auth Service 
@@ -11,4 +11,4 @@ info.app.description=This is auth service on spring boot application
 info.app.version=1.0.0
 
 server.port=8081
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+# eureka.client.service-url.default-zone=http://localhost:8761/eureka
