--- a/auth-service.properties
+++ b/auth-service.properties
@@ -14,3 +14,5 @@ server.port=8081
 spring.boot.admin.client.url=http://localhost:8080
 management.endpoints.web.exposure.include=*
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+spring.boot.admin.client.instance.service-base-url=http://localhost:8081
